익스프레스 미들웨어 그리고 미들웨어 사용목적 설명

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Darcyu83/nodejs_recap#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
