--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs_recap",
   "version": "1.0.0",
   "description": "",
-  "main": "app_routes.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app"
@@ -24,7 +24,9 @@
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "patch-package": "^7.0.0"
+    "nunjucks": "^3.2.4",
+    "patch-package": "^7.0.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
