--- a/express_typescript/package.json
+++ b/express_typescript/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/nodemon": "^1.19.2",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
