--- a/express_typescript/package.json
+++ b/express_typescript/package.json
@@ -9,14 +9,19 @@
   "author": "yuds",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.4.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.5.0",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/nodemon": "^1.19.2",
+    "eslint": "^8.44.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
