--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.5.0",
     "nunjucks": "^3.2.4",
     "patch-package": "^7.0.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
