--- a/prod_express/package.json
+++ b/prod_express/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "yuds",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "sequelize-cli": "^6.6.1"
   },
   "devDependencies": {
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22"
   }
 }
